--- a/buildProgram.ipynb
+++ b/buildProgram.ipynb
@@ -324,7 +324,7 @@
     "Example4.eventWindow = 5 #time length for the event window (including any pre/post transit observations), units of hours\n",
     "\n",
     "# Host star info\n",
-    "# Example4.GaiaJmag = 5.5\n",
+    "# Example4.Jmag = 5.5\n",
     "Example4.Teff = 5700\n",
     "\n",
     "# Now run the RM command, which auto computes the \n",
