--- a/buildProgram.ipynb
+++ b/buildProgram.ipynb
@@ -2,21 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: OldEarthOrientationDataWarning: Your version of the IERS Bulletin A is 74.1 days old. For best precision (on the order of arcseconds), you must download an up-to-date IERS Bulletin A table. To do so, run:\n",
-      "\n",
-      ">>> from astroplan import download_IERS_A\n",
-      ">>> download_IERS_A()\n",
-      " [astroplan.utils]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "import numpy as np\n",
@@ -63,7 +51,19 @@
     "\n",
     "**n_unique_nights** -- (int) The number of unique nights in the semester to observe the star. Each unique night, the star will be observed n_visits_per_night times, with each visit obtaining n_observations_per_visit number of exposures. Note, historically, RV queue instruments (HIRES and now KPF) have been scheduled for community cadence nights on ~80 unique nights. In a given semester, the total number of nights KPF is scheduled is the maximum possible value for n_unique_nights. Once the KPF schedule is announced and programs are allocated time, PI's who have targets with n_unique_nights > unique nights scheduled will be contacted and advised to ammend their request or accept the limiting maximum. \n",
     "\n",
-    "**inter_night_cadence** -- (int) The time, in days, that you wish to be the minimum separation between observations on unique nights. For example, if you wish to observe this target with at least 10 unique days separation between observations, put 10 here. Note these are calendar days, not KPF scheduled days. If no value is specified, the default value is set to 1 day, which means the target can be observed on every possible KPF scheduled night, until its requested total observations are achieved. If you wish to only get a single observation of a target, set inter_night_cadence equal to 0.\n"
+    "**inter_night_cadence** -- (int) The time, in days, that you wish to be the minimum separation between observations on unique nights. For example, if you wish to observe this target with at least 10 unique days separation between observations, put 10 here. Note these are calendar days, not KPF scheduled days. If no value is specified, the default value is set to 1 day, which means the target can be observed on every possible KPF scheduled night, until its requested total observations are achieved. If you wish to only get a single observation of a target, set inter_night_cadence equal to 0.\n",
+    "\n",
+    "**startDate** -- (str) The calendar day of the semester (UT), with format \"YYYY-MM-DD\", that you wish to be the first day where your target is allowed to be observed. For example, your target may be accessible from Hawaii on the first day of the A semester (Feb 1), but you wish to wait to observe it until the end of the semester (perhaps to overlap with observations from other facilities), so here you might designate startDate = '2024-05-01'. \n",
+    "\n",
+    "**endDate** -- (str) The calendar day of the semester (UT), with format \"YYYY-MM-DD\", that you wish to be the last day where your target is allowed to be observed. For example, your target may be accessible from Hawaii all the way until the last day of the A semester (July 31), but you wish to observe it sooner to the beginning of the semester (perhaps to overlap with observations from other facilities), so here you might designate endDate = '2024-03-01'. Note that endDate must be a later date than startDate.\n",
+    "\n",
+    "Note: if your observation is an RM or similar, do not use the startDate and endDate fields. Only use the mustDate field (see below).\n",
+    "\n",
+    "**mustDate** -- (list of strings) The specific calendar day(s) of the semester (UT), each with format \"YYYY-MM-DD\", that you must have your target observed (assuming good weather). For example, if a planet reaches quadrature in its orbit on three days of the semester and you wish to hit these dates, specify as a list of strings: ['2024-04-01', '2024-04-12', '2024-04-24']. We cannot gaurentee these kinds of timed observations at this time, but we will do our best to accomodate. Also, if your observation is an RM or similar, please use this field to specify the date.\n",
+    "\n",
+    "**notes** -- (str) This is where you can write in any notes to us that you like. Examples include directions in a crowded star field, the component of a visual binary to observe, etc. \n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -101,8 +101,8 @@
       "All looks good for this request! \n",
       "\n",
       "Passed all checks.\n",
-      "This target is observable for a total of [72] days this semester.\n",
-      "This target rises on day [0] and sets on day [72] of the semester. \n",
+      "This target is observable for a total of [92] days this semester.\n",
+      "This target rises on day [0] and sets on day [92] of the semester. \n",
       "\n",
       "Your program may not be feasible. With your desired inter-night cadence and desired unique night visits, combined with this target's accessibility this semester, there is likely not enough unique nights in the semester to complete this request. Consider ammending your request, or accept that it may not be able to be fully completed. \n",
       "\n"
@@ -149,6 +149,9 @@
     "Example1.intra_night_cadence = 0.            #float - units of hours\n",
     "Example1.inter_night_cadence = 3             #int   - units of days\n",
     "\n",
+    "# be sure not to include an commas in your note otherwise it messes up the resulting CSV!\n",
+    "Example1.notes = 'This is the brightest star in the sky... cant miss it!'\n",
+    "\n",
     "# Run checks and calculations\n",
     "Example1.computeTimeRequest()\n",
     "Example1.runChecks()\n",
@@ -171,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -229,12 +232,12 @@
    "metadata": {},
    "source": [
     "# Example 3\n",
-    "Request to get a single observation a target, without any cadence requirements. "
+    "Request to get a single observation a target, without any cadence requirements. But do require it be taken within a single specified month."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -269,6 +272,12 @@
     "Example3.nominal_ExpTime = 10\n",
     "Example3.max_ExpTime = 10\n",
     "\n",
+    "Example3.startDate = '2024-05-01'\n",
+    "Example3.endDate = '2024-06-01'\n",
+    "\n",
+    "# be sure not to include an commas in your note otherwise it messes up the resulting CSV!\n",
+    "Example3.notes = 'Binary companion; observe NE component.'\n",
+    "\n",
     "# run checks and calculations\n",
     "Example3.computeTimeRequest()\n",
     "Example3.runChecks()\n",
@@ -290,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -306,8 +315,8 @@
       "All looks good for this request! \n",
       "\n",
       "Passed all checks.\n",
-      "This target is observable for a total of [128] days this semester.\n",
-      "This target rises on day [0] and sets on day [128] of the semester. \n",
+      "This target is observable for a total of [91] days this semester.\n",
+      "This target rises on day [89] and sets on day [180] of the semester. \n",
       "\n",
       "To first order checks, this target's request is feasible. This is not a guarentee that it will actually be completed to 100% of the request.\n"
      ]
@@ -331,8 +340,11 @@
     "# total number of exposures needed and fills in cadence info appropriately\n",
     "Example4.get_RM()\n",
     "\n",
+    "# Specify the UT date of the observation\n",
+    "Example4.mustDate = ['2024-03-15']\n",
+    "\n",
     "# run checks and calculations\n",
-    "Example4.computeTimeRequest()\n",
+    "Example4.computeTimeRequest_RM()\n",
     "Example4.runChecks()\n",
     "if Example4.canContinue:\n",
     "    print(\"Passed all checks.\")\n",
@@ -355,21 +367,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This program requires an allocation of [10.44] nights to be feasible.\n",
-      "Sirius,No Gaia Name,TIC322899250,None,101.29,-16.72,-546.01,-1223.07,J2000,-1.36,5708,10,10,True,150,3,1,0.0,50,3,51000,14.17\n",
+      "This program requires an allocation of [3.01] nights to be feasible.\n",
+      "Sirius,No Gaia Name,TIC322899250,X999,101.29,-16.72,-546.01,-1223.07,J2000,-1.36,5708,10,10,True,150,3,1,0.0,50,3,51000,14.17,,,,This is the brightest star in the sky... cant miss it!\n",
       "\n",
-      "HD 219134,Gaia_DR2_2009481748875806976,TIC283722336,None,348.32,57.17,2074.414,294.452,J2000,3.86,5000,300,300,False,50,1,2,3.0,25,1,39000,10.83\n",
+      "HD 219134,Gaia_DR2_2009481748875806976,TIC283722336,X999,348.32,57.17,2074.414,294.452,J2000,3.86,5000,300,300,False,50,1,2,3.0,25,1,39000,10.83,,,,\n",
       "\n",
-      "Tau Ceti,Gaia_DR2_2452378776434276992,TIC419015728,None,26.02,-15.94,-1721.728,854.963,J2000,2.14,5300,10,10,False,1,1,1,0.0,1,0,250,0.07\n",
+      "Tau Ceti,Gaia_DR2_2452378776434276992,TIC419015728,X999,26.02,-15.94,-1721.728,854.963,J2000,2.14,5300,10,10,False,1,1,1,0.0,1,0,250,0.07,2024-05-01,2024-06-01,,Binary companion; observe NE component.\n",
       "\n",
-      "51 Pegasi,Gaia_DR2_2835207319109249920,TIC139298196,None,344.37,20.77,207.328,61.164,J2000,4.66,5700,240,240,True,75,75,1,0.0,1,0,285750,79.38\n",
+      "51 Pegasi,Gaia_DR2_2835207319109249920,TIC139298196,X999,344.37,20.77,207.328,61.164,J2000,4.66,5700,240,240,True,64,64,1,0.0,1,0,18000,5,,,['2024-03-15'],\n",
       "\n"
      ]
     }
@@ -380,11 +392,11 @@
     "\n",
     "# Your 4 letter/number proposal code as supplied at the time of submission of the proposal \n",
     "# This is used for easy sorting of targets within programs and tracking overall time accounting\n",
-    "myProgram.code = 'U999'\n",
+    "myProgram.code = 'X999'\n",
     "myProgram.semester = '2024A' # Do not change\n",
     "\n",
-    "path = # YOUR SAVE PATH HERE\n",
-    "myProgram.savefile = path + \"YourProposalCodeHERE_KPFCC_2024A.csv\" #suggested filename\n",
+    "path = '/Users/jack/Desktop/'# YOUR SAVE PATH HERE\n",
+    "myProgram.savefile = path + str(myProgram.code) + \"_KPFCC_2024A.csv\" #suggested filename\n",
     "\n",
     "# run final time accounting, final checks, then write the csv file\n",
     "myProgram.totalProgramTime()\n",
@@ -404,10 +416,204 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Gaia_ID</th>\n",
+       "      <th>TIC_ID</th>\n",
+       "      <th>Program_Code</th>\n",
+       "      <th>RA</th>\n",
+       "      <th>Dec</th>\n",
+       "      <th>pmRA</th>\n",
+       "      <th>pmDec</th>\n",
+       "      <th>Epoch</th>\n",
+       "      <th>Jmag</th>\n",
+       "      <th>...</th>\n",
+       "      <th>N_Visits_per_Night</th>\n",
+       "      <th>Intra_Night_Cadence</th>\n",
+       "      <th>N_Unique_Nights</th>\n",
+       "      <th>Inter_Night_Cadence</th>\n",
+       "      <th>Total_Time_for_Target_Seconds</th>\n",
+       "      <th>Total_Time_for_Target_Hours</th>\n",
+       "      <th>Start_Date</th>\n",
+       "      <th>End_Date</th>\n",
+       "      <th>Must_Dates</th>\n",
+       "      <th>Notes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Sirius</td>\n",
+       "      <td>No Gaia Name</td>\n",
+       "      <td>TIC322899250</td>\n",
+       "      <td>X999</td>\n",
+       "      <td>101.29</td>\n",
+       "      <td>-16.72</td>\n",
+       "      <td>-546.010</td>\n",
+       "      <td>-1223.070</td>\n",
+       "      <td>J2000</td>\n",
+       "      <td>-1.36</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>50</td>\n",
+       "      <td>3</td>\n",
+       "      <td>51000</td>\n",
+       "      <td>14.17</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>This is the brightest star in the sky... cant ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>HD 219134</td>\n",
+       "      <td>Gaia_DR2_2009481748875806976</td>\n",
+       "      <td>TIC283722336</td>\n",
+       "      <td>X999</td>\n",
+       "      <td>348.32</td>\n",
+       "      <td>57.17</td>\n",
+       "      <td>2074.414</td>\n",
+       "      <td>294.452</td>\n",
+       "      <td>J2000</td>\n",
+       "      <td>3.86</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>1</td>\n",
+       "      <td>39000</td>\n",
+       "      <td>10.83</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Tau Ceti</td>\n",
+       "      <td>Gaia_DR2_2452378776434276992</td>\n",
+       "      <td>TIC419015728</td>\n",
+       "      <td>X999</td>\n",
+       "      <td>26.02</td>\n",
+       "      <td>-15.94</td>\n",
+       "      <td>-1721.728</td>\n",
+       "      <td>854.963</td>\n",
+       "      <td>J2000</td>\n",
+       "      <td>2.14</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>250</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>2024-05-01</td>\n",
+       "      <td>2024-06-01</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Binary companion; observe NE component.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>51 Pegasi</td>\n",
+       "      <td>Gaia_DR2_2835207319109249920</td>\n",
+       "      <td>TIC139298196</td>\n",
+       "      <td>X999</td>\n",
+       "      <td>344.37</td>\n",
+       "      <td>20.77</td>\n",
+       "      <td>207.328</td>\n",
+       "      <td>61.164</td>\n",
+       "      <td>J2000</td>\n",
+       "      <td>4.66</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>18000</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>['2024-03-15']</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4 rows × 26 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Name                       Gaia_ID        TIC_ID Program_Code      RA  \\\n",
+       "0     Sirius                  No Gaia Name  TIC322899250         X999  101.29   \n",
+       "1  HD 219134  Gaia_DR2_2009481748875806976  TIC283722336         X999  348.32   \n",
+       "2   Tau Ceti  Gaia_DR2_2452378776434276992  TIC419015728         X999   26.02   \n",
+       "3  51 Pegasi  Gaia_DR2_2835207319109249920  TIC139298196         X999  344.37   \n",
+       "\n",
+       "     Dec      pmRA     pmDec  Epoch  Jmag  ...  N_Visits_per_Night  \\\n",
+       "0 -16.72  -546.010 -1223.070  J2000 -1.36  ...                   1   \n",
+       "1  57.17  2074.414   294.452  J2000  3.86  ...                   2   \n",
+       "2 -15.94 -1721.728   854.963  J2000  2.14  ...                   1   \n",
+       "3  20.77   207.328    61.164  J2000  4.66  ...                   1   \n",
+       "\n",
+       "   Intra_Night_Cadence  N_Unique_Nights  Inter_Night_Cadence  \\\n",
+       "0                  0.0               50                    3   \n",
+       "1                  3.0               25                    1   \n",
+       "2                  0.0                1                    0   \n",
+       "3                  0.0                1                    0   \n",
+       "\n",
+       "   Total_Time_for_Target_Seconds  Total_Time_for_Target_Hours  Start_Date  \\\n",
+       "0                          51000                        14.17         NaN   \n",
+       "1                          39000                        10.83         NaN   \n",
+       "2                            250                         0.07  2024-05-01   \n",
+       "3                          18000                         5.00         NaN   \n",
+       "\n",
+       "     End_Date      Must_Dates  \\\n",
+       "0         NaN             NaN   \n",
+       "1         NaN             NaN   \n",
+       "2  2024-06-01             NaN   \n",
+       "3         NaN  ['2024-03-15']   \n",
+       "\n",
+       "                                               Notes  \n",
+       "0  This is the brightest star in the sky... cant ...  \n",
+       "1                                                NaN  \n",
+       "2            Binary companion; observe NE component.  \n",
+       "3                                                NaN  \n",
+       "\n",
+       "[4 rows x 26 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "readin = pd.read_csv(myProgram.savefile)\n",
+    "readin"
+   ]
   },
   {
    "cell_type": "code",
